Fix alignfull

--- a/theme/scss/b4st/layout.scss
+++ b/theme/scss/b4st/layout.scss
@@ -4,6 +4,11 @@ body {
 	overflow-x: hidden;  // stop full width elements overflowing
 }
 
+.alignfull{
+	left:calc((100% - 100vw) / 2) !important;
+	width:100vw !important; 
+}
+
 .col-lg-12 :not(article) {
 	.alignfull {
 		position: relative;
